# service_robot_sim

./: .gitignore  .gitignore.txt  README.md  service_rebot_cmd_vel_timeout.patch
devel/: .catkin  _setup_util.py  setup.sh
devel/include/cloud_tts/: SynthesizeSpeech.h  SynthesizeSpeechRequest.h  SynthesizeSpeechResponse.h
devel/include/voice_keyword_extractor/: ExtractKeyword.h  ExtractKeywordRequest.h  ExtractKeywordResponse.h
devel/lib/pkgconfig/: cloud_tts.pc  my_world.pc  service_robot_navigation.pc  service_robot_sim.pc  sweeper_robot_omni4_base_ros.pc  voice_keyword_extractor.pc
devel/lib/python3/dist-packages/cloud_tts/srv/: _SynthesizeSpeech.py  __init__.py
devel/lib/python3/dist-packages/voice_keyword_extractor/srv/: _ExtractKeyword.py  __init__.py
devel/share/cloud_tts/cmake/: cloud_tts-msg-extras.cmake  cloud_tts-msg-paths.cmake  cloud_ttsConfig.cmake
devel/share/common-lisp/ros/cloud_tts/srv/: SynthesizeSpeech.lisp  _package.lisp  _package_SynthesizeSpeech.lisp  cloud_tts-srv.asd
devel/share/common-lisp/ros/voice_keyword_extractor/srv/: ExtractKeyword.lisp  _package.lisp  _package_ExtractKeyword.lisp  voice_keyword_extractor-srv.asd
devel/share/gennodejs/ros/cloud_tts/srv/: SynthesizeSpeech.js  _index.js
devel/share/gennodejs/ros/voice_keyword_extractor/srv/: ExtractKeyword.js  _index.js
devel/share/my_world/cmake/: my_worldConfig.cmake
devel/share/roseus/ros/cloud_tts/: manifest.l
devel/share/roseus/ros/voice_keyword_extractor/: manifest.l
devel/share/service_robot_navigation/cmake/: service_robot_navigationConfig.cmake
devel/share/service_robot_sim/cmake/: service_robot_simConfig.cmake
devel/share/sweeper_robot_omni4_base_ros/cmake/: sweeper_robot_omni4_base_rosConfig.cmake
devel/share/voice_keyword_extractor/cmake/: voice_keyword_extractor-msg-paths.cmake  voice_keyword_extractorConfig.cmake
docs/: ubuntu_voice_config_self_check.md
docs/superpowers/plans/: 2026-07-15-navigation-task-semantics.md  2026-07-15-position-only-waypoints.md  2026-07-15-task-3-runtime-diagnostics.md  2026-07-16-pose-waypoint-readme-completion.md  2026-07-16-voice-task-runner.md  2026-07-17-diff-passive-support.md
docs/superpowers/specs/: 2026-07-15-position-only-waypoints-design.md  2026-07-15-task-3-runtime-diagnostics-design.md  2026-07-15-task-routes-and-success-semantics-design.md  2026-07-16-pose-waypoint-readme-completion-design.md  2026-07-16-voice-task-runner-design.md  2026-07-17-diff-passive-support-design.md
scripts/: world_to_map.py  脚本使用.txt
src/cloud_tts/: CMakeLists.txt  package.xml  requirements.txt
src/cloud_tts/config/: tts_config.yaml
src/cloud_tts/launch/: cloud_tts.launch
src/cloud_tts/scripts/: cloud_tts_test.py  play_audio_test.py  tts_service_node.py
src/cloud_tts/srv/: SynthesizeSpeech.srv
src/my_world/: CMakeLists.txt  README.md
src/my_world/launch/: indoor.launch
src/my_world/worlds/: indoor.world
src/service_robot_diff_navigation/: CMakeLists.txt  README.md  package.xml
src/service_robot_diff_navigation/config/: amcl_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
src/service_robot_diff_navigation/launch/: diff_navigation.launch  diff_sim.launch  navigation.launch
src/service_robot_diff_navigation/maps/: indoor.pgm  indoor.yaml
src/service_robot_diff_navigation/scripts/: run_task_tests.py
src/service_robot_navigation/: CMakeLists.txt  README.md  package.xml
src/service_robot_navigation/config/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  gmapping_params.yaml  local_costmap_params.yaml  move_base_params.yaml  task_tests.yaml
src/service_robot_navigation/launch/: mapping.launch  navigation.launch  sim_mapping.launch  sim_navigation.launch
src/service_robot_navigation/maps/: indoor.pgm  indoor.yaml
src/service_robot_navigation/rviz/: navigation.rviz
src/service_robot_navigation/scripts/: run_task_tests.py  run_voice_tasks.py  save_map.sh
src/service_robot_sim/: CMakeLists.txt  README.md
src/service_robot_sim/launch/: omni4_indoor.launch
src/sweeper_robot_diff2_submit_ros/: CMakeLists.txt  package.xml  run_ros_visualization.sh
src/sweeper_robot_diff2_submit_ros/config/: robot_params.yaml
src/sweeper_robot_diff2_submit_ros/docs/: 全向轮与差速轮区别说明.md  要求落实说明.md  速度控制接口.md
src/sweeper_robot_diff2_submit_ros/launch/: display.launch  gazebo.launch
src/sweeper_robot_diff2_submit_ros/meshes/: README.md
src/sweeper_robot_diff2_submit_ros/rviz/: display.rviz
src/sweeper_robot_diff2_submit_ros/scripts/: diff_drive_velocity_interface.py  test_cmd_vel.sh
src/sweeper_robot_diff2_submit_ros/urdf/: sweeper_robot_diff2_submit.urdf
src/sweeper_robot_diff2_submit_ros/worlds/: diff2_demo.world
src/sweeper_robot_omni4_base_ros/: CMakeLists.txt  MODEL_CHECKLIST.md  README.md  package.xml  run_gazebo.sh  run_ros_visualization.sh
src/sweeper_robot_omni4_base_ros/config/: omni4_kinematics.yaml
src/sweeper_robot_omni4_base_ros/launch/: display.launch  gazebo.launch
src/sweeper_robot_omni4_base_ros/meshes/: omni_wheel_mesh_info.txt
src/sweeper_robot_omni4_base_ros/rviz/: front.rviz  iso.rviz  left.rviz  rear.rviz  top.rviz
src/sweeper_robot_omni4_base_ros/scripts/: test_cmd_vel.sh  velocity_interface_node.py
src/sweeper_robot_omni4_base_ros/urdf/: sweeper_robot_omni4_base.urdf
src/sweeper_robot_omni4_base_ros/worlds/: empty.world
src/voice_keyword_extractor/: CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txty  package.xml  package.xml.save
src/voice_keyword_extractor/config/: vocabulary.yaml
src/voice_keyword_extractor/launch/: voice_keyword.launch
src/voice_keyword_extractor/scripts/: asr_test.py  keyword_service_node.py  keyword_service_node.py.bak  llm_keyword_test.py  record_test.py
src/voice_keyword_extractor/srv/: ExtractKeyword.srv
tests/: test_diff_navigation_config.py  test_robot_optimization_config.py  test_task_test_runner_config.py  test_voice_task_runner.py  test_world_geometry.py
(+2 files in other folders)
