<?xml version="1.0"?>
<package format="2">
  <name>service_robot_navigation</name>
  <version>0.1.0</version>
  <description>ROS Noetic mapping, localization and move_base configuration for the 0.5 m omnidirectional service robot.</description>

  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>service_robot_sim</exec_depend>
  <exec_depend>voice_keyword_extractor</exec_depend>
  <exec_depend>cloud_tts</exec_depend>
</package>
