<?xml version="1.0"?>
<package format="2">
  <name>sweeper_robot_diff2_submit_ros</name>
  <version>1.0.0</version>
  <description>Two differential wheel sweeper robot ROS Noetic model with RViz and Gazebo interfaces.</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>rviz</depend>
  <depend>urdf</depend>
</package>
