<?xml version="1.0"?>
<package format="2">
  <name>sweeper_robot_omni4_base_ros</name>
  <version>1.0.0</version>
  <description>ROS Noetic and Gazebo package for a 0.5 m four-omni-wheel sweeper robot model.</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>urdf</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
